# ebooks-folder-manager

./: .gitignore  .gitmodules  README.md  Taskfile.yml  biome.json  biome.jsonc  cron_rclone.bash  package-lock.json  package.json  pyproject.toml  pyrightconfig.json  tsconfig.json
__js-version/: .gitignore  Taskfile.yml  package.json  tsconfig.json
__js-version/src/: Book.mts  index.mts  interfaces.mts  logger.mts
__js-version/src/epub/: getMetadata.mts  interfaces.mts  removeAdobeDrm.mts
__js-version/src/epub/__test__/: getMetadata.test.mts
__js-version/src/lib/: getBackupFilepath.mts  spawnSyncError.mts
__js-version/src/pdf/: runK2PdfOpt.mts
dedrm/: pyproject.toml
dedrm/dedrm/: __main__.py
dedrm/dedrm/DeDRM_plugin/: __version.py  config.py
dedrm/dedrm/DeDRM_plugin/standalone/: jsonconfig.py  passhash.py  remove_drm.py
docs/: convert.md  drm.md  watch.md
efm/: __main__.py  action.py  book.py  book_exceptions.py  config.py  dedrm.py  env.py  exceptions.py  kfxconvert.py  metadata.py  todo.md  transaction.py
efm/DeDRM_plugin/: __init__.py  adobekey.py  genbook.py  k4mobidedrm.py  utilities.py
efm/DeDRM_plugin--released/: epubtest.py  erdr2pml.py  topazextract.py  zipfix.py
efm/DeDRM_plugin--released/standalone/: __init__.py
efm/KFX_Input/: __init__.py  action.py
efm/KFX_Input/kfxlib/: epub_output.py  ion.py  ion_binary.py  ion_symbol_table.py  ion_text.py  jxr_container.py  jxr_image.py  jxr_misc.py  kfx_container.py  kpf_book.py  kpf_container.py  original_source_epub.py  resources.py  unpack_container.py  utilities.py  version.py  yj_book.py  yj_container.py  yj_metadata.py  yj_position_location.py  yj_structure.py  yj_to_epub.py  yj_to_epub_content.py  yj_to_epub_illustrated_layout.py  yj_to_epub_metadata.py  yj_to_epub_misc.py  yj_to_epub_navigation.py  yj_to_epub_notebook.py  yj_to_epub_properties.py  yj_to_epub_resources.py  yj_to_image_book.py
efm/KFX_Input/kfxlib/calibre-plugin-modules/pypdf/: __init__.py  _cmap.py  _doc_common.py  _encryption.py  _merger.py  _page.py  _page_labels.py  _protocols.py  _reader.py  _utils.py  _writer.py  _xobj_image_helpers.py  filters.py  pagerange.py  types.py  xmp.py
efm/KFX_Input/kfxlib/calibre-plugin-modules/pypdf/_codecs/: __init__.py
efm/KFX_Input/kfxlib/calibre-plugin-modules/pypdf/annotations/: __init__.py  _markup_annotations.py  _non_markup_annotations.py
efm/kfxlib/: yj_to_epub_metadata.py  yj_to_epub_misc.py  yj_versions.py
efm/pdfmeta/: __main__.py
kfxlib/: yj_to_epub_content.py  yj_to_epub_properties.py
main/: cli.mts  index.mts  interfaces.mts
main/actions/: removeDrm.mts
main/epub/: getMetadataV2.mts  getMetadataV3.mts
pdfmeta/: pyproject.toml
pdfmeta/pdfmeta/: __main__.py
sample-books/: 1Q84.epub  InterestingTimes.epub  WorldUnbound.epub
src/: Book.mts  BookMetadata.mts  cli.mts  index.mts  interfaces.mts
src/actions/: convertPdf.mts  printMetadata.mts  removeDrm.mts  renameFromMetadata.mts
src/actions/__test__/: renameFromMetadata.test.mts
src/env/: ensureK2pdfopt.mts  ensurePoetry.mts
src/env/utils/: checkCommand.mts
src/epub/: detectDrm.mts  getMetadata.mts  getMetadataV3.mts  interfaces.mts
src/epub/__test__/: getMetadata.test.mts
src/lib/: PoetryRunner.mts  getMetadata.mts
src/pdf/: Metadata.mts  PdfMetadata.mts
tests/: README.md  conftest.py  test_book.py
(+12 files in other folders)
