[project]
name = "efm"
version = "0.1.0"
description = ""
authors = [
    {name = "Sean McCollum",email = "anincrediblyshortname@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "lxml (>=5.3.1,<6.0.0)",
    "pycryptodomex (>=3.21.0,<4.0.0)",
    "pymupdf (>=1.25.3,<2.0.0)",
    "toml (>=0.10.2,<0.11.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "schema (>=0.7.7,<0.8.0)",
    "configparser (>=7.2.0,<8.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "cryptography (>=44.0.2,<45.0.0)",
]

[project.scripts]
efm = "efm.__main__:main"
# NOTE: can only be used directly in wine, windows, or macos
# finds and saves default adobe encryption keys. save to given output directory (optional)
# [<outputdir>]
getadobekey = "efm.DeDRM_plugin.adobekey:cli_main"
# given this is an epub, test what type of drm this is (adobe, etc)
# <key>
epubtest = "efm.DeDRM_plugin.epubtest:main"
# given this is an epub, and the key, decrypt it
# <key> <infile> <outfile>
epubdecrypt = "efm.DeDRM_plugin.ineptepub:cli_main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = "^0.9.9"
debugpy = "^1.8.13"
pytest = "^8.0.0"
mock = "^5.2.0"
pyright = "^1.1.397"

[tool.ruff]
exclude = ["DeDRM_plugin"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v"

[tool.pyright]
include = ["efm"]
exclude=["efm/DeDRM_tools", "efm/DeDRM_plugin--released", "efm/adl"]