[project]
name = "pdfmeta"
version = "0.1.0"
description = ""
authors = [
    {name = "Sean McCollum",email = "anincrediblyshortname@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pymupdf (>=1.25.3,<2.0.0)"
]

[project.scripts]
pdfmeta = "pdfmeta.__main__:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
